# gt7-simdash

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  Pipfile  README.md  app.py  color.py  config.json  configs.py  dash.py  event.py  events.py  gear.py  hmi.py  lap.py  logformatter.py  main.py  mypy.ini  mysprite.py  nordschleife-lap-0.pickle  plot_circuit.ipynb  pyproject.toml  requirements.txt  rgb.py  rpm.py  setup.py  speed.py  telemetry.py  test_blinkt.py
common/: evendispatcher.py  event.py  eventdispatcher.py  ipv4.py  logger.py
hmi/: boot.py  color.py  debug.py  event.py  gear.py  hmi.py  lap.py  led.py  popup.py  properties.py  rgb.py  rpm.py  settings.py  speed.py  view.py  widget.py
hyperpixel/: README_pwm.md  pwm  pwm.c
notebooks/: AlsaceTest-lap-1.pickle  AlsaceTest-lap-2.pickle  AlsaceVillage-lap-1.pickle  AlsaceVillage-lap-2.pickle  Autopolis-lap-1.pickle  Autopolis-lap-2.pickle  AutopolisShort-lap-1.pickle  BlueMoonBay-lap-1.pickle  BlueMoonBay-lap-2.pickle  BlueMoonBayInsideA-lap-1.pickle  BlueMoonBayInsideA-lap-2.pickle  BlueMoonBayInsideB-lap-1.pickle  BlueMoonBayInsideB-lap-2.pickle  BroadBean-lap-1.pickle  BroadBean-lap-2.pickle  ColoradoSprings-lap-1.pickle  ColoradoSprings-lap-2.pickle  DaytoneCity-lap-1.pickle  DaytoneCity-lap-2.pickle  DaytoneOval-lap-1.pickle  DaytoneOval-lap-2.pickle  FishermansRanch-lap-2.pickle  Fuji-lap-1.pickle  Fuji-lap-2.pickle  HughSpeedRing-lap-1.pickle  HughSpeedRing-lap-2.pickle  Interlagos-lap-1.pickle  Interlagos-lap-2.pickle  KyotoMiyabi-lap-1.pickle  KyotoMiyabi-lap-2.pickle  KyotoYamagiwa-lap-1.pickle  KyotoYamagiwa-lap-2.pickle  KyotoYamagiwaMiyabi-lap-1.pickle  KyotoYamagiwaMiyabi-lap-2.pickle  (+107 more)
(+99 files in other folders)
